--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,13 +8,13 @@
 
     <script src="../static/js/jquery-3.3.1.js" th:src="@{js/jquery-3.3.1.js}"></script>
     <script src="../static/bootstrap/js/bootstrap.js" th:src="@{bootstrap/js/bootstrap.js}"></script>
-    <script src="../static/bootstrap/js/bootstrapValidator.min.js" th:src="@{bootstrap/js/bootstrapValidator.min.js}"></script>
+    <!--<script src="../static/bootstrap/js/bootstrapValidator.min.js" th:src="@{bootstrap/js/bootstrapValidator.min.js}"></script>-->
 </head>
 <body class="text-center">
 
 <div class="modal-dialog" style="margin-top: 10%;">
     <div class="modal-content">
-        <form class="form-horizontal" role="form" method="post" id="form">
+        <form class="form-horizontal" role="form" method="post" id="submitForm">
         <div class="modal-header">
             <h4 class="modal-title text-center" id="myModalLabel">账号登陆</h4>
         </div>
