--- a/src/main/resources/templates/studentList.html
+++ b/src/main/resources/templates/studentList.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Home</title>
-
+    <meta charset="UTF-8">
+    <title>Title</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css" th:href="@{bootstrap/css/bootstrap.css}">
+    <link rel="stylesheet" href="../static/css/dashboard.css" th:href="@{css/dashboard.css}">
 
     <script src="../static/js/jquery-3.3.1.js" th:src="@{js/jquery-3.3.1.js}"></script>
     <script src="../static/bootstrap/js/bootstrap.js" th:src="@{bootstrap/js/bootstrap.js}"></script>
-
 </head>
 <body class="text-center">
 <h3></h3>
@@ -56,44 +56,126 @@
         </tr>
         </thead>
         <tbody id="student">
-
+        <tr th:each="student:${students}">
+            <td class="text-center" th:text="${student.department}"></td>
+            <td class="text-center" th:text="${student.name}"></td>
+            <td class="text-center" th:text="${student.area}"></td>
+            <td class="text-center" th:text="${student.phone}"></td>
+            <td class="text-center" th:text="${student.sex}"></td>
+            <td class="text-center" th:text="${student.address}"></td>
+            <td class="text-center" th:text="${student.isSchool}"></td>
+            <td class="text-center">
+                <form th:action="@{/show}" method="post">
+                    <input hidden th:value="${student.userId}" name="userId">
+                    <button type="submit" class="btn-sm">查看详情</button>
+                </form>
+            </td>
+        </tr>
         </tbody>
     </table>
 
 </body>
+
 <script>
     $(function () {
-        // var data = {
-        //     "role" : "student"
-        // };
-        $.ajax({
-            type:"get",// get或者post
-            url:"findStudents",// 请求的url地址
-            // data: data,
-            dataType:"json",//json写了jq会帮我们转换成数组或者对象 他已经用JSON.parse弄好了
-            success:function(data){ // 成功拿到结果放到这个函数 data就是拿到的结果
-                var student = '';
-                for (var i = 0; i < data.length; i++) {
-                    if (data[i].isSchool == 1){
-                        school = "是";
-                    }
-                    else {
-                        school = "否";
-                    }
-                    student +='<tr>\n' +
-                        '            <td class="text-center">'+data[i].department+'</td>\n' +
-                        '            <td class="text-center">'+data[i].name+'</td>\n' +
-                        '            <td class="text-center">'+data[i].area+'</td>\n' +
-                        '            <td class="text-center">'+data[i].phone+'</td>\n' +
-                        '            <td class="text-center">'+data[i].sex+'</td>\n' +
-                        '            <td class="text-center">'+data[i].address+'</td>\n' +
-                        '            <td class="text-center">'+school+'</td>\n' +
-                        '            <td class="text-center"><a href="list?userId='+data[i].userId+'">查看详情</a></td>\n' +
-                        '        </tr>';
-                }
-                $("#student").html(student);
+        var currentPage = $("#currentPage").val();
+        var totalPages = $("#totalPages").val();
+        var pageSize = $("#pageSize").val();
+        var li = '';
+        var beforePage = currentPage - 1;
+        if (beforePage <= 0){
+            beforePage = 1;
+        }
+        if (currentPage != 1){
+            li += '<li>\n' +
+                '                        <a href="findTeachers?page=1" aria-label="Previous">\n' +
+                '                            <span aria-hidden="true">首页</span>\n' +
+                '                        </a>\n' +
+                '                    </li>';
+
+            li += '<li>\n' +
+                '                        <a href="findTeachers?page='+beforePage+'" aria-label="Previous">\n' +
+                '                            <span aria-hidden="true">上一页</span>\n' +
+                '                        </a>\n' +
+                '                    </li>';
+        }
+        else {
+            li += '<li class="disabled">\n' +
+                '      <span>\n' +
+                '        <span aria-hidden="true">首页</span>\n' +
+                '      </span>\n' +
+                '    </li>';
+
+            li += '<li class="disabled">\n' +
+                '      <span>\n' +
+                '        <span aria-hidden="true">上一页</span>\n' +
+                '      </span>\n' +
+                '    </li>';
+        }
+
+        var begin;
+        var end;
+
+        if (totalPages < 10){
+            begin = 1;
+            end = totalPages;
+        }
+        else {
+            begin = currentPage - 5;
+            end = currentPage + 4;
+            //如果前边不够5个，后边补齐10个
+            if(begin < 1){
+                begin = 1;
+                end = begin + 9;
             }
-        })
+            //如果后边不足4个，前边补齐10个
+            if(end > totalPages){
+                end = totalPages;
+                begin = end - 9 ;
+            }
+        }
+        for (var i = begin; i <= end; i++) {
+            if (currentPage == i){
+                li += '<li class="active">\n' +
+                    '      <span>'+i+' <span class="sr-only">(current)</span></span>\n' +
+                    '    </li>';
+            }
+            else {
+                li += '<li><a href="findTeachers?page='+i+'">'+i+'</a></li>';
+            }
+
+        }
+        var nextPage = parseInt(currentPage) + 1;
+        if (nextPage > totalPages){
+            nextPage = nextPage - 1;
+        }
+        if (currentPage == totalPages){
+            li += '<li class="disabled">\n' +
+                '      <span>\n' +
+                '        <span aria-hidden="true">下一页</span>\n' +
+                '      </span>\n' +
+                '    </li>';
+
+            li += '<li class="disabled">\n' +
+                '      <span>\n' +
+                '        <span aria-hidden="true">尾页</span>\n' +
+                '      </span>\n' +
+                '    </li>';
+        }
+        else {
+            li += '<li>\n' +
+                '                        <a href="findTeachers?page='+nextPage+'" aria-label="Next">\n' +
+                '                            <span aria-hidden="true">下一页</span>\n' +
+                '                        </a>\n' +
+                '                    </li>';
+            li += '<li>\n' +
+                '                        <a href="findTeachers?page='+totalPages+'" aria-label="Next">\n' +
+                '                            <span aria-hidden="true">尾页</span>\n' +
+                '                        </a>\n' +
+                '                    </li>';
+        }
+        $(".pagination").html(li);
     })
 </script>
+
 </html>
